:sparkles:Se añadio una barrra de carga antes de obtener los productos

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@ Asignatura: TPI 115 -->
             </div>
         </div>
     </nav>
-    <div class="obtenerArt">
+    <div id="obtenerArt">
         <button id="obtenerArt-btn" onclick="mostrarArticulos()">Obtener Articulos</button>
+    </div>
+    <div id="spinner-container">
+        <div class="spinner"></div>
     </div>
     <main id="main">
         <!-- Contenedor para el botón de agregar producto -->
