Se agrego el gifdel icono de espera

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Asignatura: TPI 115 -->
         <button id="obtenerArt-btn" onclick="mostrarArticulos()">Obtener Articulos</button>
     </div>
     <div id="spinner-container">
-        <div class="spinner"></div>
+        <img src="wait-icon.gif" alt="waiting-img">
     </div>
     <main id="main">
         <!-- Contenedor para el botón de agregar producto -->
